GitVersion1/objects/CDH_Segment__c.object
<CustomObject>
    <description>Used to track Segments in the Data Hub</description>
    <fields>
        <fullName>CDH_Account__c</fullName>
        <description>Links the CDH Segment record to the CDH Account record.  This record will denote the segments on the Salesforce Account record linked to the CDH Account record</description>
        <label>CDH Account</label>
        <referenceTo>CDH_Account__c</referenceTo>
        <relationshipLabel>CDH Segments</relationshipLabel>
        <relationshipName>CDH_Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CDH_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the Primary Segment</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDH_Segment_Step_1__c</fullName>
        <label>CDH Segment (Step 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aiden</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
                <value>
                    <fullName>Mila</fullName>
                </value>
                <value>
                    <fullName>Noah</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
                <value>
                    <fullName>Walton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Step_2__c</fullName>
        <label>CDH Step 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--Not Defined--</fullName>
                </value>
                <value>
                    <fullName>1 - Large/Extensive</fullName>
                </value>
                <value>
                    <fullName>2 - Medium/Extensive</fullName>
                </value>
                <value>
                    <fullName>3 - Large/Selected</fullName>
                </value>
                <value>
                    <fullName>4 - Medium/Selected</fullName>
                </value>
                <value>
                    <fullName>5 - Large/Limited</fullName>
                </value>
                <value>
                    <fullName>6 - Medium/Limited</fullName>
                </value>
                <value>
                    <fullName>7 - Small/Extensive</fullName>
                </value>
                <value>
                    <fullName>8 - Small/Selected</fullName>
                </value>
                <value>
                    <fullName>9 - Small/Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CDH Segment</label>
    <nameField>
        <displayFormat>CDHS-{0000}</displayFormat>
        <label>CDH Segment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDH Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>